[package]
name = "airdroprust"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.15.2"
solana-client = "1.15.2"
solana-program = "1.15.2"

# For base58 <-> byte array conversions
bs58 = "0.4"

# For IDL generation
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }